# basilica

./: .gitignore  .gitmodules  Cargo.toml  README.md  REFACTOR_PROGRESS.md  basilica-api.spec.md  basilica-cli.spec.md  cli.spec.md  cli.toml  justfile  test_env.sh
crates/basilica-api/: Cargo.toml  README.md
crates/basilica-api/migrations/: 002_add_ssh_credentials.sql  003_add_terminated_user_rentals.sql  004_create_api_keys.sql
crates/basilica-api/src/: client.rs  country_mapping.rs  error.rs  lib.rs  main.rs  server.rs
crates/basilica-api/src/api/: mod.rs  types.rs
crates/basilica-api/src/client/: builder.rs  mod.rs
crates/basilica-api/src/config/: auth.rs  mod.rs  server.rs
crates/basilica-api/src/load_balancer/: mod.rs
crates/basilica-api/src/models/: auth.rs  deployment.rs  executor.rs  mod.rs  rental.rs  ssh.rs
crates/basilica-api/src/services/: auth.rs  auth_callback.rs  cache.rs  client.rs  deployment.rs  executor.rs  mod.rs  rental.rs  ssh.rs  token_store.rs
crates/basilica-api/tests/: auth0_test.rs  client_integration.rs  jwt_test.rs
crates/basilica-billing/: Cargo.toml
crates/basilica-billing/migrations/: 001_initial_schema.sql  004_add_required_ids.sql  005_billing_packages.sql  010_add_unique_user_credits.sql
crates/basilica-billing/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
crates/basilica-billing/src/aggregator/: event_store.rs  mod.rs  processor.rs
crates/basilica-billing/src/domain/: billing_handlers.rs  credits.rs  events.rs  mod.rs  packages.rs  processor.rs  rentals.rs  rules_engine.rs  types.rs
crates/basilica-billing/src/grpc/: billing_service.rs
crates/basilica-billing/src/storage/: credits.rs  events.rs  mod.rs  packages.rs  rds.rs  rentals.rs  repositories.rs  rules.rs  usage.rs  user_preferences.rs
crates/basilica-billing/src/telemetry/: ingester.rs  processor.rs
crates/basilica-billing/tests/: rules_repository_test.rs
crates/basilica-billing/tests/bdd/: mod.rs
crates/basilica-cli/: CHANGELOG.md  Cargo.toml
crates/basilica-cli/src/: client.rs  error.rs  lib.rs  main.rs
crates/basilica-cli/src/api/: auth.rs  client.rs  mod.rs
crates/basilica-cli/src/auth/: callback_server.rs  device_flow.rs  mod.rs  oauth_flow.rs  token_store.rs  types.rs
crates/basilica-cli/src/cache/: mod.rs
crates/basilica-cli/src/cli/: args.rs  commands.rs
crates/basilica-cli/src/config/: mod.rs
crates/basilica-cli/src/interactive/: selector.rs
crates/basilica-cli/src/output/: banner.rs  mod.rs  table_output.rs
crates/basilica-cli/src/progress/: mod.rs
crates/basilica-cli/src/ssh/: mod.rs
crates/basilica-cli/src/wallet/: mod.rs
crates/basilica-cli/tests/: auth_test.rs
crates/basilica-executor/: Cargo.toml
crates/basilica-executor/src/: lib.rs  main.rs  metrics_recorder.rs  miner_auth.rs
crates/basilica-executor/src/cli/: args.rs
crates/basilica-executor/src/config/: system.rs  types.rs
crates/basilica-executor/src/grpc_server/: executor_management.rs  mod.rs  types.rs
crates/basilica-executor/src/system_monitor/: collector.rs  cpu.rs  disk.rs  docker_utils.rs  lifecycle.rs  metrics.rs  mod.rs  network.rs  stream.rs  types.rs  volumes.rs
crates/basilica-executor/src/validation_session/: hotkey_verifier.rs
crates/basilica-executor/tests/: config_tests.rs  grpc_server_tests.rs  monitoring_integration_test.rs  monitoring_smoke_test.rs  simple_spawn_test.rs  telemetry_config_test.rs  test_unified_monitoring.rs  test_volume_monitoring.rs
crates/basilica-miner/: Cargo.toml
crates/basilica-miner/src/: executor_auth.rs  executor_manager.rs  main.rs  validator_comms.rs  validator_discovery.rs
crates/basilica-miner/src/cli/: args.rs
crates/basilica-miner/src/executors/: grpc_client.rs
crates/basilica-miner/src/persistence/: registration_db.rs
crates/basilica-miner/src/services/: stake_monitor.rs
crates/basilica-miner/src/ssh/: session_orchestrator.rs
crates/basilica-miner/tests/: mod.rs
crates/basilica-payments/: Cargo.toml
crates/basilica-payments/migrations/: 001_payments_schema.sql
crates/basilica-payments/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
crates/basilica-payments/src/blockchain/: local_treasury.rs  mod.rs  monitor.rs
crates/basilica-payments/src/client/: mod.rs  payments_client.rs
crates/basilica-sdk/: Cargo.toml  README.md
crates/basilica-sdk-python/: Cargo.toml  README.md  pyproject.toml  test_sdk_improvements.py
crates/basilica-sdk-python/examples/: health_check.py  list_executors.py  quickstart.py  start_rental.py  start_rental_advanced.py
crates/basilica-sdk-python/src/: lib.rs  types.rs
crates/basilica-sdk-python/tests/: test_client.py
crates/basilica-sdk/src/: client.rs  error.rs  lib.rs  types.rs
crates/basilica-sdk/tests/: integration_tests.rs
crates/basilica-validator/: Cargo.toml
crates/basilica-validator/src/: lib.rs  main.rs  process_group.rs
crates/basilica-validator/tests/: network_profile_integration_test.rs  network_table_test.rs
crates/collateral-contract/: CLI.md  Cargo.toml  README.md  flow.sh  query.sh
crates/collateral-contract/script/: DeployUpgradeable.s.sol  deploy-local.sh  deploy-testnet.sh  deploy.sh  flow.sh  query-local.sh  query-testnet.sh  query.sh  tx-local.sh  tx-testnet.sh
crates/collateral-contract/src/: Collateral.sol  CollateralUpgradableABI.json  CollateralUpgradeable.sol  CollateralUpgradeableV2.sol  config.rs  lib.rs  main.rs  tests.rs
crates/collateral-contract/test/: CollateralTestnet.t.sol  CollateralUpgradeable.t.sol
crates/integration-tests/: Cargo.toml  run_bdd_scenarios.sh  test_flow.sh
crates/integration-tests/billing/: scenario_balance_check.rs  scenario_credits_apply.rs
crates/integration-tests/payments/: scenario_deposits_list.rs  scenario_wallet_create.rs
crates/integration-tests/src/: auth_test_utils.rs  config.rs  lib.rs
crates/integration-tests/tests/: auth_e2e_tests.rs  auth_security_tests.rs  bdd_payment_billing_flow.rs  executor_database_fallback_integration.rs  grpc_auth_integration.rs  miner_executor_flow.rs  weight_setter_build_normalized_weights.rs
(+394 files in other folders)
