[workspace]
members = [
  "crates/basilica-common",
  "crates/basilica-protocol",
  "crates/basilica-executor",
  "crates/basilica-miner",
  "crates/basilica-validator",
  "crates/basilica-billing",
  "crates/basilica-payments",
  "crates/bittensor",
  "crates/basilica-api",
  "crates/basilica-cli",
  "crates/basilica-sdk",
  "crates/basilica-sdk-python",
  "crates/integration-tests",
  "crates/collateral-contract",
]
resolver = "2"

# Workspace-wide dependencies that all crates can use
[workspace.dependencies]
# Alloy
alloy = { version = "1.0.23", features = ["sol-types"] }
alloy-sol-types = { version = "1.0.23" }
alloy-network = { version = "1.0.23" }
alloy-primitives = { version = "1.0.23" }
alloy-provider = { version = "1.0.23" }
alloy-contract = { version = "1.0.23" }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "0.4"
# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-journald = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
figment = { version = "0.10", features = ["toml", "env", "json"] }

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "time",
  "bigdecimal",
  "rust_decimal",
  "migrate",
] }

# gRPC and networking
tonic = { version = "0.10", features = ["tls"] }
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# Crypto and security
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
clap-verbosity-flag = "2.2"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
regex = "1.10"
url = "2.5"
once_cell = "1.19"
libc = "0.2"

# Additional crypto dependencies
sp-core = "34.0.0"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
signature = "2.2"
pbkdf2 = { version = "0.12", features = ["hmac"] }
argon2 = "0.5"
ssh-key = { version = "0.6", features = ["ed25519", "rand_core", "std"] }
zeroize = { version = "1.7", features = ["derive"] }
data-encoding = "2"
sha2 = "0.10"

# Dev/test dependencies
tempfile = "3.8"

# Build dependencies
dotenvy = "0.15"

# Executor-specific dependencies
tokio-stream = { version = "0.1", features = ["net"] }
nvml-wrapper = "0.9"
fs_extra = "1.3"
num_cpus = "1.16"
flume = { version = "0.11", features = ["async"] }
http = "0.2"

# Dev dependencies
serial_test = "3.0"
mockall = "0.11"

# Miner-specific dependencies
tonic-health = "0.10.2"
cron = "0.12"
deadpool = "0.10"
governor = "0.6"
jsonwebtoken = "9.2"
socket2 = "0.5"

# Validator-specific dependencies
bytes = "1.5"
async-stream = "0.3"
lru = "0.12"
eventsource-stream = "0.2"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand_chacha = "0.3"
fastrand = "2.0"
utoipa = { version = "4.1", features = ["chrono", "uuid", "axum_extras"] }

# Billing-specific dependencies
deadpool-postgres = "0.12"
tokio-postgres = "0.7"
postgres-types = "0.2"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.0"
aws-sdk-rds = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
urlencoding = "2.1"
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# Additional dev dependencies
proptest = "1.4"
tokio-test = "0.4"
test-log = "0.2"
pretty_assertions = "1.4"
portpicker = "0.1"

# Payments dependencies
time = "0.3"

# Bittensor dependencies
home = "0.5"
parity-scale-codec = "3.6"

# API-specific dependencies
hyper = { version = "0.14", features = ["full"] }
nonzero_ext = "0.3"
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
parking_lot = "0.12"
pin-project = "1.1"
bs58 = "0.5"
weighted-rs = "0.1"

# Additional dev test dependencies
criterion = "0.5"
wiremock = "0.6"

# CLI-specific dependencies
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
tabled = "0.15"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
shell-escape = "0.1"
shellexpand = "3.1"
etcetera = "0.8"
color-eyre = "0.6"
oauth2 = "4.4"
webbrowser = "0.8"

# SDK dependencies
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }

# Python bindings
pyo3 = { version = "0.26", features = ["abi3-py310"] }
pyo3-stub-gen = { version = "0.13.1" }
pyo3-stub-gen-derive = { version = "0.13.1" }
pythonize = "0.26"
pyo3-build-config = "0.26"

# Integration test dependencies
dirs = "5.0"

# Subxt
subxt = "0.38"
subxt-types = "0.38"
subxt-signer = "0.38"
subxt-codegen = { version = "0.38" }
subxt-metadata = { version = "0.38" }
subxt-utils-fetchmetadata = { version = "0.38", features = ["url"] }

# System information
sysinfo = "0.30"

# Docker integration
bollard = "0.15"

# OCI client for Docker image validation
oci-client = "0.13"

# HTTP server (for validator API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Memory-mapped storage
memmap2 = "0.9"

# Bittensor integration via crabtensor
crabtensor = { git = "https://github.com/storb-tech/crabtensor", tag = "v0.5.2" }

[workspace.metadata]
# Workspace metadata for tooling
rust-version = "1.80"
