[package]
name = "basilica-api"
version = "0.1.0"
edition = "2021"
authors = ["Basilica Team"]
description = "Smart HTTP gateway for Basilica validator network"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependencies
basilica-common = { path = "../basilica-common" }
bittensor = { path = "../bittensor" }
basilica-protocol = { path = "../basilica-protocol" }
basilica-validator = { path = "../basilica-validator", features = [
  "client",
  "openapi",
] }
basilica-sdk = { path = "../basilica-sdk", features = ["openapi"] }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "timeout", "trace"] }
hyper = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
figment = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Rate limiting
governor = { workspace = true }
nonzero_ext = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Caching
moka = { workspace = true }
redis = { workspace = true, optional = true }


# Concurrent collections
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Database
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
regex = { workspace = true }

# Load balancing algorithms
weighted-rs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }

[features]
default = ["server", "redis-cache", "utoipa"]
server = []
client = []
redis-cache = ["redis"]
utoipa = []
full = ["server", "client", "redis-cache", "utoipa"]

[[bin]]
name = "basilica-api"
path = "src/main.rs"
