[package]
name = "basilica-billing"
version = "0.1.0"
edition = "2021"
description = "Billing service for Basilica compute subnet"
repository = "https://github.com/tplr-ai/basilica"

[dependencies]
basilica-common = { path = "../basilica-common", features = ["postgres"] }
basilica-protocol = { path = "../basilica-protocol" }

toml = "0.8"

tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "rust_decimal",
  "migrate",
] }
deadpool-postgres = "0.12"
tokio-postgres = "0.7"
postgres-types = "0.2"

aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.0"
aws-sdk-rds = "1.0"

tonic = "0.10"
tonic-health = "0.10"
prost = "0.12"
prost-types = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

figment = { version = "0.10", features = ["toml", "env", "json"] }

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1.6", features = ["v4", "serde"] }

urlencoding = "2.1"

async-stream = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "1.0"
anyhow = "1.0"

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

clap = { version = "4.4", features = ["derive", "env"] }

futures = "0.3"
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
tokio-test = "0.4"
test-log = "0.2"
pretty_assertions = "1.4"
tempfile = "3.8"
wiremock = "0.5"
portpicker = "0.1"
futures-util = "0.3"

[[bin]]
name = "basilica-billing"
path = "src/main.rs"

[lib]
name = "basilica_billing"
path = "src/lib.rs"
