[package]
name = "basilica-billing"
version = "0.1.0"
edition = "2021"
description = "Billing service for Basilica compute subnet"
repository = "https://github.com/one-covenant/basilica"

[dependencies]
basilica-common = { path = "../basilica-common", features = ["postgres"] }
basilica-protocol = { path = "../basilica-protocol" }

toml = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }

sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "rust_decimal",
  "migrate",
] }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }

aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-rds = { workspace = true }

tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

figment = { workspace = true, features = ["toml", "env", "json"] }

chrono = { workspace = true }

uuid = { workspace = true }

urlencoding = { workspace = true }

async-stream = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

clap = { workspace = true }
clap-verbosity-flag = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
test-log = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
portpicker = { workspace = true }
futures-util = { workspace = true }

[[bin]]
name = "basilica-billing"
path = "src/main.rs"

[lib]
name = "basilica_billing"
path = "src/lib.rs"
