[package]
name = "basilica-billing"
version = "0.1.0"
edition = "2021"
description = "Billing service for Basilica compute subnet"
repository = "https://github.com/one-covenant/basilica"

[dependencies]
basilica-common = { path = "../basilica-common", features = ["postgres"] }
basilica-protocol = { path = "../basilica-protocol" }

toml = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }

sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "rust_decimal",
  "migrate",
] }

aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }

tonic = { workspace = true }
tonic-health = { workspace = true }
prost-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }

figment = { workspace = true, features = ["toml", "env", "json"] }

chrono = { workspace = true }

uuid = { workspace = true }

urlencoding = { workspace = true }

tracing = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

clap = { workspace = true }
clap-verbosity-flag = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]

[[bin]]
name = "basilica-billing"
path = "src/main.rs"

[lib]
name = "basilica_billing"
path = "src/lib.rs"
