[package]
name = "basilica-cli"
version = "0.3.0"
edition = "2021"
authors = ["Basilica Team"]
description = "Unified CLI for Basilica GPU rental and network management"
license = "MIT"
repository = "https://github.com/tplr-ai/basilica"

[[bin]]
name = "basilica"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client for API communication
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
eventsource-stream = "0.2"

# Terminal UI and interaction
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
tabled = "0.15"

# Shell completions
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# SSH functionality (using external ssh command for now)
shell-escape = "0.1"

# File operations
shellexpand = "3.1"
etcetera = "0.8"

# Error handling
color-eyre = "0.6"

# OAuth dependencies
oauth2 = "4.4"
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors"] }
rand = { workspace = true }
base64 = "0.21"
sha2 = "0.10"
webbrowser = "0.8"
url = "2.4"


# Internal crate dependencies
basilica-api = { path = "../basilica-api" }
basilica-common = { path = "../basilica-common" }
basilica-sdk = { path = "../basilica-sdk" }
basilica-validator = { path = "../basilica-validator", features = [
    "client",
    "openapi",
    "cli",
] }

[dev-dependencies]
tempfile = "3.8"
