[package]
name = "basilica-cli"
version = "0.3.2"
edition = "2021"
authors = ["Basilica Team"]
description = "Unified CLI for Basilica GPU rental and network management"
license = "MIT"
repository = "https://github.com/one-covenant/basilica"

[[bin]]
name = "basilica"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client for API communication
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
eventsource-stream = { workspace = true }

# Terminal UI and interaction
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tabled = { workspace = true }

# Shell completions
clap_complete = { workspace = true }

# SSH functionality (using external ssh command for now)
shell-escape = { workspace = true }

# File operations
shellexpand = { workspace = true }
etcetera = { workspace = true }

# Error handling
color-eyre = { workspace = true }

# OAuth dependencies
oauth2 = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors"] }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
webbrowser = { workspace = true }
url = { workspace = true }


# Internal crate dependencies
basilica-api = { path = "../basilica-api" }
basilica-common = { path = "../basilica-common" }
basilica-sdk = { path = "../basilica-sdk" }
basilica-validator = { path = "../basilica-validator", features = [
    "client",
    "openapi",
    "cli",
] }

[dev-dependencies]
tempfile = { workspace = true }
