[package]
name = "basilica-executor"
version = "0.1.0"
edition = "2021"
description = "Basilca Executor - Agent running on GPU machines that executes tasks securely"

[lib]
name = "basilica_executor"
path = "src/lib.rs"

[[bin]]
name = "basilica-executor"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
sysinfo = { workspace = true }
bollard = { workspace = true }
prost-types = { workspace = true }

# Internal dependencies
basilica-common = { path = "../basilica-common", features = ["sqlite"] }
basilica-protocol = { path = "../basilica-protocol" }

# Additional required dependencies
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
hex = { workspace = true }

# Executor-specific dependencies
# GPU monitoring
nvml-wrapper = { workspace = true }
# TOML configuration
toml = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
