[package]
name = "basilica-miner"
version = "0.1.0"
edition = "2021"
description = "Basilca Miner - Bittensor neuron that manages executor fleets"
rust-version = "1.70"

[lib]
name = "basilica_miner"
path = "src/lib.rs"

[[bin]]
name = "basilica-miner"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-health = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
collateral-contract = { path = "../collateral-contract" }
hex = { workspace = true }

# Internal dependencies
basilica-common = { path = "../basilica-common", features = ["sqlite"] }
basilica-protocol = { path = "../basilica-protocol" }
bittensor = { path = "../bittensor" }

# Miner-specific dependencies
# HTTP client for external communications
reqwest = { workspace = true }

# Configuration
toml = { workspace = true }
url = { workspace = true }

# JSON Web Tokens for authentication
jsonwebtoken = { workspace = true }

# Background job processing
async-trait = { workspace = true }

# Random number generation
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
futures = { workspace = true }

[features]
default = []
# Enable test utilities for executor communication
test-utils = []
