[package]
name = "basilica-payments"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basilica-payments"
path = "src/main.rs"

[[bin]]
name = "paymentsctl"
path = "src/bin/paymentsctl.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
tonic = { workspace = true }
tonic-health = "0.10"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true }
figment = { version = "0.10", features = ["toml", "env", "json"] }
toml = "0.8"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "time",
  "json",
  "bigdecimal",
  "migrate",
] }
uuid = { workspace = true }
time = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4"
data-encoding = "2"
sp-core = "34.0.0"
subxt = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }

[dependencies.basilica-protocol]
path = "../basilica-protocol"

[dependencies.basilica-common]
path = "../basilica-common"
features = ["postgres"]

[dependencies.bittensor]
path = "../bittensor"
