[package]
name = "basilica-payments"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basilica-payments"
path = "src/main.rs"

[[bin]]
name = "paymentsctl"
path = "src/bin/paymentsctl.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
data-encoding = { workspace = true }
sp-core = { workspace = true }
subxt = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }

[dependencies.basilica-protocol]
path = "../basilica-protocol"

[dependencies.basilica-common]
path = "../basilica-common"
features = ["postgres"]

[dependencies.bittensor]
path = "../bittensor"
